--- a/Homework 3.html
+++ b/Homework 3.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>Home Work 3</title>
-	<h1><center> Howe Work 3 
+	<h1><center> HomeWork 3 
 	Coming Soon</center>  </h1> 
 </head>
 	<meta charset="utf-8">
