--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 <head>
 	<title>Priya's list of Homeworks for CNIT 131 </title>
-	<h1><center> Welcome to Priya's list of homeworks for CNIT 131</center>  </h1> 
+	<h1> Hello! 
+             Bonjour</h1>
+	<h2> Welcome to Priya's Homework List</h2> 
 </head>
 	<meta charset="utf-8">
 	<meta name= "description" content="List of Homeworks"/>
@@ -24,7 +26,7 @@
       <a href="Homework 8.html">Homework 8.html</a>
     </nav>
 
-    <h2>Lists of Homeworks to come</h2>
+    <h3>Lists of Homeworks to come</h3>
 		<ul>
 			<li>Homework 2
 				<a href="Homework 2.html">Homework 2</a>
@@ -67,20 +69,44 @@
  		color:Black;
  	}
  	h1  {
- 	    font-family: Tahoma, sans-serif;
- 		font-size: 52px;
- 		Color: DarkGold;
- 	 	border-style:solid;
- 		border-width:5px;
- 		padding-top:50px;
- 		padding-bottom:20px;
- 		padding-left:10px;
- 		padding-left:10px;
+ 	    font-family: ;, sans-serif;
+ 		font-size: 89px;
+ 		font-weight:200;
+ 		Color: black;
+ 		background-color: whitesmoke;
+ 		word-spacing: 890px;
+ 		box-shadow: 4px;
+ 		border-width:70px;
+ 		padding-left: 250px;
+ 		padding-top:70px;
+ 		padding-bottom:65px;
+ 		
  	}
+ 	h2 {
+ 		font-family: sans-serif;
+ 		font-size: 45px;
+ 		font-weight:bold;
+ 		color: white;
+ 		text-shadow: black; 109px 90px;
+ 		padding-left: 35px;
+ 		padding-top: 10px;
+ 		padding-bottom: 10px;
+
+ 	}
+
+ 	h3{ 
+ 		font: sans-serif;
+ 		font-size:30px ;
+ 		font-weight: 200;
+ 		color: whitesmoke;
+ 		padding-left: 17px;
+ 		padding-top: 10px;
+ 		padding-bottom: 10px;
+
+ 	 }
     
 body {
-	background-color:greenyellow;
-}
+	background-color:slategrey;}
 </style>
 </body>
 </html>
