--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en">
 
 <head>
 	<title>Priya's list of Homeworks for CNIT 131 </title>
 	<h1> Hello! 
              Bonjour</h1>
 	<h2> Welcome to Priya's Homework List</h2> 
-</head>
 	<meta charset="utf-8">
 	<meta name= "description" content="List of Homeworks"/>
 	<meta name="keywords" cotent="Index, Homeworks, CNIT 131, Javascript"/>
-	<meta name="language" content= "English"/>
 	<meta name= "tite" content= "List of Homeworks"/>
+</head>
+	
 
 <body>
 
