--- a/Homework 2.html
+++ b/Homework 2.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang= "en">
 
 <head>
 	<title>Home Work 2</title>
 	<h1><center> Howe Work 2 
 	Coming Soon</center>  </h1> 
-</head>
 	<meta charset="utf-8">
 	<meta name= "description" content="Homework 2"/>
-
 	<meta name="keywords" cotent="Homework, CNIT 131, JAVA SCRIPT"/>
-	<meta name="language" content= "English"/>
+</head>
+	
 
 <body>
  <nav>
