--- a/Homework 2.html
+++ b/Homework 2.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>Home Work 2</title>
-	<h1><center> Howe Work 2 
+	<h1><center> HomeWork 2 
 	Coming Soon</center>  </h1> 
 	<meta charset="utf-8">
 	<meta name= "description" content="Homework 2"/>
@@ -18,8 +18,7 @@
       <a href="Homework 4.html">Homework 4</a>
       <a href="Homework 5.html">Homework 5</a>
       <a href="Homework 6.html">Homework 6</a>
-      <a href="Homework 7.html">
-      Homework 7</a>
+      <a href="Homework 7.html"> Homework 7</a>
       <a href="Homework 8.html">Homework 8.html</a>
     </nav>
  <style>
