--- a/Homework 3.html
+++ b/Homework 3.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en">
 
 <head>
-	<title>Home Work 3</title>
+	<title>HomeWork 3</title>
 	<h1><center> HomeWork 3 
-	Coming Soon</center>  </h1> 
-</head>
+	Coming Soon</center></h1> 
 	<meta charset="utf-8">
 	<meta name= "description" content="Homework 2"/>
 
-	<meta name="keywords" cotent="Homework, CNIT 131, JAVA SCRIPT"/>
-	<meta name="language" content= "English"/>
+	<meta name="keywords" cotent="Homework, CNIT 133, JAVA SCRIPT"/>
 	<meta name= "tite" content= "My Recovery Journey"/>
+</head>
+	
 
 <body>
  
