--- a/Homework 8.html
+++ b/Homework 8.html
@@ -21,8 +21,7 @@
       <a href="Homework 4.html">Homework 4</a>
       <a href="Homework 5.html">Homework 5</a>
       <a href="Homework 6.html">Homework 6</a>
-      <a href="Homework 7.html">
-      Homework 7</a>
+      <a href="Homework 7.html">Homework 7</a>
       <a href="Index.html">Index</a>
     </nav>
  
