--- a/Homework 8.html
+++ b/Homework 8.html
@@ -22,7 +22,7 @@
       <a href="Homework 5.html">Homework 5</a>
       <a href="Homework 6.html">Homework 6</a>
       <a href="Homework 7.html">Homework 7</a>
-      <a href="index.html">Index</a>
+      <a href="index.html">index</a>
     </nav>
  
  <style>
