--- a/Homework 2.html
+++ b/Homework 2.html
@@ -8,20 +8,8 @@
 	<meta charset="utf-8">
 	<meta name= "description" content="Homework 2"/>
 	<meta name="keywords" cotent="Homework, CNIT 133, JAVA SCRIPT"/>
-</head>
 	
-
-<body>
- <nav>
-      <a href="index.html">index</a>
-      <a href="Homework 3.html">Homework 3</a>
-      <a href="Homework 4.html">Homework 4</a>
-      <a href="Homework 5.html">Homework 5</a>
-      <a href="Homework 6.html">Homework 6</a>
-      <a href="Homework 7.html"> Homework 7</a>
-      <a href="Homework 8.html">Homework 8.html</a>
-    </nav>
- <style>
+	<style>
  	p.text{
  		font-size: 20px;
  		font-weight:normal;
@@ -41,11 +29,21 @@
  		padding-left:10px;
  		padding-left:10px;
  	}
-    
-
 body {
 	background-color: beige;
 }
-/style>
+  </style>	 
+</head>
+
+<body>
+ <nav>
+      <a href="index.html">index</a>
+      <a href="Homework 3.html">Homework 3</a>
+      <a href="Homework 4.html">Homework 4</a>
+      <a href="Homework 5.html">Homework 5</a>
+      <a href="Homework 6.html">Homework 6</a>
+      <a href="Homework 7.html"> Homework 7</a>
+      <a href="Homework 8.html">Homework 8.html</a>
+    </nav>
 </body>
 </html>
