--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 	}
 
  	h3{ 
- 		font: sans-serif;
+		font: sans;
+		font-family:sans-serf
  		font-size:30px ;
  		font-weight: 200;
  		color: whitesmoke;
@@ -58,7 +59,9 @@
  		padding-top: 10px;
  		padding-bottom: 10px;
 	}
-
+	body {
+	background-color:slategrey;}
+</style>
 </head>
 <body>
 	<nav>
@@ -96,8 +99,5 @@
 			</li>
 		</ul>
  
-body {
-	background-color:slategrey;}
-</style>
 </body>
 </html>
