--- a/Homework 3.html
+++ b/Homework 3.html
@@ -29,10 +29,11 @@
  		padding-left:10px;
  		padding-left:10px;
  	}
+	
 	body {
 	background-color: beige;
 	}
-/style>
+</style>
 </head>
 
 <body>
