--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	<h2> Welcome to Priya's Homework List</h2> 
 
 	<nav>
-      <a href="Homework 2.html">Homework 2</a>
+      <a href="Homework%202.html">Homework 2</a>
       <a href="Homework 3.html">Homework 3</a>
       <a href="Homework 4.html">Homework 4</a>
       <a href="Homework 5.html">Homework 5</a>
