--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
 
 	<nav>
       <a href="Homework%202.html">Homework 2</a>
-      <a href="Homework 3.html">Homework 3</a>
-      <a href="Homework 4.html">Homework 4</a>
-      <a href="Homework 5.html">Homework 5</a>
-      <a href="Homework 6.html">Homework 6</a>
-      <a href="Homework 7.html">Homework 7</a>
-      <a href="Homework 8.html">Homework 8</a>
+      <a href="Homework%203.html">Homework 3</a>
+      <a href="Homework%204.html">Homework 4</a>
+      <a href="Homework%205.html">Homework 5</a>
+      <a href="Homework%206.html">Homework 6</a>
+      <a href="Homework%207.html">Homework 7</a>
+      <a href="Homework%208.html">Homework 8</a>
 	</nav> 
 </body>
 </html>
