--- a/Homework 2.html
+++ b/Homework 2.html
@@ -1,49 +1,47 @@
 <!DOCTYPE html>
-<html lang= "en">
-
+<html lang="en">
 <head>
-	<title>HomeWork 2</title>
-	<h1><center> HomeWork 2 
-	Coming Soon</center>  </h1> 
-	<meta charset="utf-8">
-	<meta name= "description" content="Homework 2"/>
-	<meta name="keywords" cotent="Homework, CNIT 133, JAVA SCRIPT"/>
-	
-	<style>
- 	p.text{
- 		font-size: 20px;
- 		font-weight:normal;
- 	}
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Bar Graph</title>
+<style>
+    .bar-graph {
+        width: 300px;
+        height: 200px;
+        border: 1px solid #ccc;
+        margin: 20px auto;
+        padding: 10px;
+    }
 
- 	li.2{
- 		font-size: 20px;
- 	}
- 	h1  {
- 	    font-family: Tahoma, sans-serif;
- 		font-size: 52px;
- 		Color: Black;
- 	 	border-style:solid;
- 		border-width:5px;
- 		padding-top:50px;
- 		padding-bottom:20px;
- 		padding-left:10px;
- 		padding-left:10px;
- 	}
-body {
-	background-color: beige;
-}
-  </style>	 
+    .bar {
+        background-color: #007bff;
+        margin-bottom: 5px;
+    }
+
+    .bar span {
+        display: block;
+        background-color: #ff6347;
+        height: 20px;
+        transition: width 0.5s ease;
+    }
+</style>
 </head>
-
 <body>
- <nav>
-      <a href="index.html">index</a>
-      <a href="Homework 3.html">Homework 3</a>
-      <a href="Homework 4.html">Homework 4</a>
-      <a href="Homework 5.html">Homework 5</a>
-      <a href="Homework 6.html">Homework 6</a>
-      <a href="Homework 7.html"> Homework 7</a>
-      <a href="Homework 8.html">Homework 8.html</a>
-    </nav>
+
+<div class="bar-graph">
+    <div class="bar" style="width: 80%;">
+        <span style="width: 80%;"></span>
+    </div>
+    <div class="bar" style="width: 60%;">
+        <span style="width: 60%;"></span>
+    </div>
+    <div class="bar" style="width: 40%;">
+        <span style="width: 40%;"></span>
+    </div>
+    <div class="bar" style="width: 90%;">
+        <span style="width: 90%;"></span>
+    </div>
+</div>
+
 </body>
 </html>
